--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=db;Uid=user;Pwd=password;"
+  },
   "AllowedHosts": "*"
 }
